# grin-btc-poc

./: Cargo.toml  README.md  meeting.org
src/: alice.rs  bob.rs  commit.rs  dleq.rs  ecdsa.rs  execute.rs  keypair.rs  lib.rs  look_for.rs  main.rs  messages.rs  schnorr.rs  setup_parameters.rs
src/bitcoin/: action.rs  alice.rs  base_parameters.rs  bob.rs  client.rs  event.rs  keygen.rs  keypair.rs  keys.rs  mod.rs  node.rs  offer.rs  rpc.rs  sign.rs  transaction.rs  util.rs  wallet.rs  wallet_outputs.rs
src/grin/: action.rs  alice.rs  base_parameters.rs  bob.rs  bulletproof.rs  event.rs  keygen.rs  keypair.rs  keys.rs  mod.rs  offer.rs  sign.rs  special_outputs.rs  wallet.rs
tests/: schnorr_ecdsa.rs
