[package]
name = "grin_btc_poc"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>", "Lloyd Fournier <lloyd.fourn@gmail.com>"]
edition = "2018"

[dependencies]
blake2 = "0.8"
grin_secp256k1zkp = "0.7"
generic-array = "0.12"
lazy_static = "1.4"
bitcoin = { version = "0.19", git = "https://github.com/jaspervdm/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
rand = "0.7"
serde = "1"
rust-gmp = "0.5"
sha2 = "0.8"

[patch.crates-io]
grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }