[package]
name = "grin_btc_poc"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>", "Lloyd Fournier <lloyd.fourn@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
bitcoin = { version = "0.19", git = "https://github.com/jaspervdm/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
blake2 = "0.8"
generic-array = "0.12"
grin_chain = "3"
grin_core = "3"
grin_keychain = "3"
grin_secp256k1zkp = "0.7"
grin_util = "3"
grin_wallet_controller = "3"
grin_wallet_impls = "3"
grin_wallet_libwallet = "3"
grin_wallet_util = "3"
hex = "0.4"
lazy_static = "1.4"
purerust_secp256k1 = { package = "libsecp256k1", version = "0.3" }
rand = "0.7"
sha2 = "0.8"
thiserror = "1"

[patch.crates-io]
grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }